--- a/argentbankapp/package.json
+++ b/argentbankapp/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@redux-devtools/extension": "^3.3.0",
         "@reduxjs/toolkit": "^1.9.7",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -14,6 +15,7 @@
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "redux-thunk": "^3.1.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
